self practice done

--- a/index.html
+++ b/index.html
@@ -22,24 +22,30 @@
             <a class="header-panel" href="">Achivement</a>
         </div>
     </section>
-    <section class="self-introduction">
-        <div class="top-banner">
-            <h1><span id="welcome-color">WELCOME</span></h1>
-            <h2>To</h2>
-            <h2>My <span id="kingdom-color">Kingdom!</span></h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, incidunt similique? Nisi sunt soluta,
-                consectetur quaerat nesciunt, fugiat vel dolorem blanditiis porro cum reiciendis repellendus obcaecati
-                odit.
-                Inventore, porro enim!</p>
-            <a class="hireme-button" target="_blank" href="https://www.facebook.com/profile.php?id=100028013535011">HIRE
-                ME</a>
-        </div>
-        <div class="my_image">
-            <img src="images/myself.png" alt="myself">
+    <section id="header">
+        <div class="flexible-container">
+            <div class="top-banner">
+                <h1><span id="welcome-color">WELCOME</span></h1>
+                <h2 id="to">To</h2>
+                <h2>My <span id="kingdom-color">Kingdom!</span></h2>
+                <h3>Programming and Coading</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, incidunt similique? Nisi sunt
+                    soluta,
+                    consectetur quaerat nesciunt, fugiat vel dolorem blanditiis porro cum reiciendis repellendus
+                    obcaecati
+                    odit.
+                    Inventore, porro enim!</p><br>
+                <a class="hireme-button" target="_blank"
+                    href="https://www.linkedin.com/in/md-minhajul-islam-showkhin-809658206/">HIRE
+                    ME</a>
+            </div>
+            <div class="my_image">
+                <img src="images/myself.png" alt="myself">
+            </div>
         </div>
     </section>
 
-    <section class="self-introduction">
+    <section class="flexible-container">
         <div class="image-goal">
             <img src="images/goal-image.png" alt="goal">
         </div>
@@ -51,6 +57,44 @@
         </div>
     </section>
 
+    <section class="flexible-container">
+        <div class="hobby">
+            <h2>Hobby</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, sint! Non illum nisi eligendi,
+                provident eum unde quia excepturi voluptatibus sed ipsam odit consectetur vel expedita? Dolorum porro
+                deleniti maxime?</p>
+        </div>
+        <div class="hobby-image">
+            <img src="images/hobby-image.png" alt="">
+        </div>
+    </section>
+
+    <section class="experiance-item">
+        <h1>Experiance</h1>
+        <div class="flexible-container">
+            <div id="android-app-developer" class="developer-item">
+                <h2>Android App Developer</h2>
+                <h3>2020-Present | Junoior Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis asperiores vero velit eum nobis,
+                    veniam aut consectetur. Ea aliquid, quaerat dignissimos odio magnam, illo dolorem placeat suscipit
+                    enim
+                    amet doloremque.
+                </p>
+            </div>
+            <div id="web-developer" class="developer-item">
+                <h2>Web Developer</h2>
+                <h3>2021-Present | Begginer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis asperiores vero velit eum nobis,
+                    veniam aut consectetur. Ea aliquid, quaerat dignissimos odio magnam, illo dolorem placeat suscipit
+                    enim
+                    amet doloremque.
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p><span>Thank You!</span> For Visiting My Portfolio</p>
+    </footer>
 </body>
 
 </html>
