--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
                 <h2 id="to">To</h2>
                 <h2>My <span id="kingdom-color">Kingdom!</span></h2>
                 <h3>Programming and Coading</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, incidunt similique? Nisi sunt
-                    soluta,
-                    consectetur quaerat nesciunt, fugiat vel dolorem blanditiis porro cum reiciendis repellendus
-                    obcaecati
-                    odit.
-                    Inventore, porro enim!</p><br>
+                <p>I am Minhajul Islam Showkhin. Now i am undergraduate student of Software Engineering in Daffodil
+                    International University. To obtain a position with opportunities to utilize my technical, I.T
+                    experiences, skill, talent, creativity, sincerity for the better achievement of the organization.
+                </p><br>
                 <a class="hireme-button" target="_blank"
                     href="https://www.linkedin.com/in/md-minhajul-islam-showkhin-809658206/">HIRE
                     ME</a>
@@ -51,18 +49,21 @@
         </div>
         <div class="middle-section">
             <h1>Life Goals</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi dicta minus, consequuntur possimus et
-                ratione obcaecati blanditiis eos corrupti suscipit numquam voluptates dolor ad saepe, aliquid amet
-                molestias voluptatum eaque.</p>
+            <p> My
+                future goal is become a honest personality with my devolving software engineering carrier.Now, I am try
+                to beacome web developer and also a
+                Android App Developer.</p>
+            <a class="hireme-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
 
     <section class="flexible-container">
         <div class="hobby">
             <h2>Hobby</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, sint! Non illum nisi eligendi,
-                provident eum unde quia excepturi voluptatibus sed ipsam odit consectetur vel expedita? Dolorum porro
-                deleniti maxime?</p>
+            <p>My hobby is coding, lestening music, gaming and also so on.
+                I also love to know about new technology. I love to take my self cool and
+                learn about new think which is make my carrier better in future.
+            </p>
         </div>
         <div class="hobby-image">
             <img src="images/hobby-image.png" alt="">
@@ -75,19 +76,15 @@
             <div id="android-app-developer" class="developer-item">
                 <h2>Android App Developer</h2>
                 <h3>2020-Present | Junoior Developer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis asperiores vero velit eum nobis,
-                    veniam aut consectetur. Ea aliquid, quaerat dignissimos odio magnam, illo dolorem placeat suscipit
-                    enim
-                    amet doloremque.
+                <p>In the recent time i make a android "e_commerce" app. And also in the time I am work in "Flight
+                    Reservation" Project which is also android app.
                 </p>
             </div>
             <div id="web-developer" class="developer-item">
                 <h2>Web Developer</h2>
                 <h3>2021-Present | Begginer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis asperiores vero velit eum nobis,
-                    veniam aut consectetur. Ea aliquid, quaerat dignissimos odio magnam, illo dolorem placeat suscipit
-                    enim
-                    amet doloremque.
+                <p>Now, I am learn the web development from programming hero. Which is teach me the developing a web
+                    site. I love to developing web site.
             </div>
         </div>
     </section>
